fix: remove overlay on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3294,8 +3294,6 @@ body.is-touch #banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-position: left center;
-    background-color: #0003;
   }
 }
 
